--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <center>
         <b>A Clock</b>
       </center>
-      <img src="clock1280.jpg" alt="clock" />
+      <img src="text/clock1280.jpg" alt="clock" />
       <p>
         Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sint possimus
         enim minus consequatur, velit molestias quibusdam ex tempora neque!
