--- a/index.html
+++ b/index.html
@@ -39,6 +39,11 @@
         laudantium ullam voluptate reiciendis. Similique itaque exercitationem
         alias at laborum fugit nisi facere!
       </p>
-    </div>
+    </div><br><br>
+      <div id="map-test" style="width: 600px; height: 400px"></div>
+      <!-- <div id="map-test" class="map"></div> -->
+   <script src="https://api-maps.yandex.ru/2.1/?apikey=ваш API-ключf&lang=ru_RU">
+    </script>
+    <script src="script.js"></script>
   </body>
 </html>
