--- a/index.html
+++ b/index.html
@@ -40,10 +40,20 @@
         alias at laborum fugit nisi facere!
       </p>
     </div><br><br>
-      <div id="map-test" style="width: 600px; height: 400px"></div>
-      <!-- <div id="map-test" class="map"></div> -->
-   <script src="https://api-maps.yandex.ru/2.1/?apikey=ваш API-ключf&lang=ru_RU">
-    </script>
-    <script src="script.js"></script>
+     
+    <!-- konstruktor yandex karta -->
+
+       <div class="container">
+      <div class="row">
+         <div class="col-md-6">
+            <h3>kak nas naiti</h3>
+            <p>address nasi kompani:<strong>Mecamor 7</strong></p>
+            <p>telefon nasi kompani:<strong>8(927) 44-55-628</strong></p>
+         </div>
+         <div class="col-md-6">
+            <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A10bf4753370211bfd9fe247faa5ec0b620b12515c08c1b7abdaa0e71cbdd872e&amp;width=500&amp;height=400&amp;lang=ru_RU&amp;scroll=false"></script>
+         </div>
+      </div>
+   </div>
   </body>
 </html>
