--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         laudantium ullam voluptate reiciendis. Similique itaque exercitationem
         alias at laborum fugit nisi facere!
       </p>
-      <p>hello vard</p>
+      <p>hello vard lorem ipsum</p>
     </div><br><br>
      
     <!-- konstruktor yandex karta -->
