add html animate

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.coudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     <title>Document</title>
     <style></style>
   </head>
@@ -39,7 +40,7 @@
         laudantium ullam voluptate reiciendis. Similique itaque exercitationem
         alias at laborum fugit nisi facere!
       </p>
-      <p>hello vard lorem ipsum</p>
+      <p class="animate__animated animate__shakeX animate__infinite">hello vard</p>
     </div><br><br>
      
     <!-- konstruktor yandex karta -->
