--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <div>
       <center>
-        <b>A Clock</b>
+        <b>Aa Clock</b>
       </center>
       <img src="text/clock1280.jpg" alt="clock" />
       <p>
