Fix typo in the clock title

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <div>
       <center>
-        <b>A Clock</b>
+        <b>A Clockk</b>
       </center>
       <img src="text/clock1280.jpg" alt="clock" />
       <p>
@@ -42,3 +42,4 @@
     </div>
   </body>
 </html>
+
